Criada funcionalidade de vendas online #1

--- a/abcBolinhas.html
+++ b/abcBolinhas.html
@@ -5,5 +5,7 @@
 <title>Bolinhas</title>
 </head>
 <body>
+    <p>Seja redirecionado à página de 
+        <a href="formVendaInternet.html"> Vendas Online</a></p>
 </body>
 </html>
